force-app/main/default/objects/Account/fields/Type_of_License_Holder__c.field-meta.xml
<CustomField>
    <fullName>Type_of_License_Holder__c</fullName>
    <inlineHelpText>Choose your license</inlineHelpText>
    <label>Type of License Holder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licensed Life Insurance and/or Accident and Sickness Insurance Agent (LLQP)</fullName>
                <default>true</default>
                <label>Licensed Life Insurance and/or Accident and Sickness Insurance Agent (LLQP)</label>
            </value>
            <value>
                <fullName>Mutual Fund Dealer Association (MFDA) Registered Representative</fullName>
            </value>
            <value>
                <fullName>Investment Industry Regulatory Organization of Canada (IIROC) Registered Representative.</fullName>
            </value>
            <value>
                <fullName>Exempt Market Dealer (EMD)</fullName>
            </value>
            <value>
                <fullName>Unlicensed Financal Planners</fullName>
            </value>
            <value>
                <fullName>Unlicensed Assistants</fullName>
            </value>
            <value>
                <fullName>Licensed Assistants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>