force-app/main/default/objects/Account/fields/Underwriter_s_Notes__c.field-meta.xml
<CustomField>
    <fullName>Underwriter_s_Notes__c</fullName>
    <description>An underwriter can write free text any comments that he or she wishes to be displayed on the Quote Letters.</description>
    <label>Underwriter&apos;s Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>