force-app/main/default/objects/Account/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Username</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>