force-app/main/default/objects/Account/recordTypes/Brokerage.recordType-meta.xml
<RecordType>
    <fullName>Brokerage</fullName>
    <active>true</active>
    <description>This will hold information about the broker&apos;s company</description>
    <label>Brokerage</label>
</RecordType>