force-app/main/default/objects/Account/recordTypes/Firm_Rider.recordType-meta.xml
<RecordType>
    <fullName>Firm_Rider</fullName>
    <active>true</active>
    <description>This will hold information about the Firm Rider&apos;s company</description>
    <label>Firm Rider</label>
</RecordType>