force-app/main/default/objects/Account/recordTypes/Insurer.recordType-meta.xml
<RecordType>
    <fullName>Insurer</fullName>
    <active>true</active>
    <description>Account to capture insurer information</description>
    <label>Insurer</label>
</RecordType>