force-app/main/default/objects/Account/recordTypes/Provincial_Regulators.recordType-meta.xml
<RecordType>
    <fullName>Provincial_Regulators</fullName>
    <active>true</active>
    <description>Account to capture provincial regulators&apos; information</description>
    <label>Provincial Regulators</label>
</RecordType>