force-app/main/default/objects/Account/validationRules/Address_Cannot_be_changed_when_Is_Bound.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Cannot_be_changed_when_Is_Bound</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL( FinServ__Status__c , &apos;Bound&apos;),

 ISCHANGED( BillingAddress )

)</errorConditionFormula>
    <errorDisplayField>FinServ__Status__c</errorDisplayField>
    <errorMessage>Please change account status to make changes in address.</errorMessage>
</ValidationRule>