force-app/main/default/objects/Account/listViews/All_Brokerages.listView-meta.xml
<ListView>
    <fullName>All_Brokerages</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Total_Premium_Brok__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Brokerage</value>
    </filters>
    <label>All Brokerage Accounts</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
        <allInternalUsers></allInternalUsers>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>