force-app/main/default/objects/Account/listViews/FinServ__My_Groups.listView-meta.xml
<ListView>
    <fullName>FinServ__My_Groups</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>FinServ__TotalFinancialAccounts__c</columns>
    <columns>FinServ__AUM__c</columns>
    <columns>FinServ__WalletShare__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.FinServ__IndustriesHousehold</value>
    </filters>
    <filters>
        <field>FinServ__IndividualType__c</field>
        <operation>equals</operation>
        <value>Group</value>
    </filters>
    <label>My Groups</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>