force-app/main/default/objects/Account/listViews/FinServ__My_Institutions.listView-meta.xml
<ListView>
    <fullName>FinServ__My_Institutions</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FinServ__ClientCategory__c</columns>
    <columns>FinServ__TotalFinancialAccounts__c</columns>
    <columns>FinServ__AUM__c</columns>
    <columns>FinServ__WalletShare__c</columns>
    <columns>FinServ__LastInteraction__c</columns>
    <columns>FinServ__NextInteraction__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.FinServ__IndustriesInstitution</value>
    </filters>
    <label>My Institutions</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>